syntax = "proto3";
package fairyring.auction;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "fairyring/auction/params.proto";
import "fairyring/auction/sealed_bid_auction.proto";

option go_package = "github.com/Fairblock/fairyring/x/auction/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fairyring/auction/params";
  }

  rpc Auction(QueryAuctionRequest) returns (QueryAuctionResponse) {
    option (google.api.http).get = "/fairyring/auction/auction/{identity}";
  }

  rpc AuctionAll(QueryAuctionAllRequest) returns (QueryAuctionAllResponse) {
    option (google.api.http).get = "/fairyring/auction/auction";
  }

  rpc TimedAuction(QueryTimedAuctionRequest) returns (QueryTimedAuctionResponse) {
    option (google.api.http).get = "/fairyring/auction/timed_auction/{identity}";
  }

  rpc TimedAuctionAll(QueryTimedAuctionAllRequest) returns (QueryTimedAuctionAllResponse) {
    option (google.api.http).get = "/fairyring/auction/timed_auction";
  }

  rpc AuthorizedBidders(QueryAuthorizedBiddersRequest) returns (QueryAuthorizedBiddersResponse){
    option (google.api.http).get = "/fairyring/auction/authorized_bidders";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryAuctionRequest {
  string identity = 1;
}

message QueryAuctionResponse {
  AuctionDetail auction_detail = 1;
}

message QueryAuctionAllRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAuctionAllResponse {
  repeated AuctionDetail auction_details = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryTimedAuctionRequest {
  string identity = 1;
}

message QueryTimedAuctionResponse {
  AuctionDetail auction_detail = 1;
}

message QueryTimedAuctionAllRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryTimedAuctionAllResponse {
  repeated AuctionDetail auction_details = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAuthorizedBiddersRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAuthorizedBiddersResponse {
  repeated BidderDetail bidders = 1;
}